--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -3,5 +3,6 @@ Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
 ImageCore = "a09fc81d-aa75-5fe9-8630-4744c3626534"
+ImageIO = "82e4d734-157c-48bb-816b-45c225c6df19"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 SimpleGui = "a78eb1c3-f9be-4b1a-a708-e7053b7f16d7"
