--- a/Project.toml
+++ b/Project.toml
@@ -10,9 +10,13 @@ GLAbstraction = "ca6e7d0a-b0c9-59ca-8aba-aebf11497e1c"
 GLFW = "f7f18e0c-5ee9-5ccd-a5bf-e8befd85ed98"
 GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
 ImageCore = "a09fc81d-aa75-5fe9-8630-4744c3626534"
+ImageIO = "82e4d734-157c-48bb-816b-45c225c6df19"
 IndirectArrays = "9b13fd28-a010-5f03-acff-a1bbcff69959"
 ModernGL = "66fc600b-dfda-50eb-8b99-91cfa97b1301"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
+
+[compat]
+ImageIO = "0.6.9"
 
 [extras]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
