--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 [deps]
 ColorTypes = "3da002f7-5984-5a60-b8a6-cbb66c0b333f"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+FreeTypeAbstraction = "663a7486-cb36-511b-a19d-713bb74d65c9"
 GLAbstraction = "ca6e7d0a-b0c9-59ca-8aba-aebf11497e1c"
 GLFW = "f7f18e0c-5ee9-5ccd-a5bf-e8befd85ed98"
 GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
@@ -16,6 +17,7 @@ ModernGL = "66fc600b-dfda-50eb-8b99-91cfa97b1301"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 
 [compat]
+FreeTypeAbstraction = "0.10.6"
 ImageIO = "0.6.9"
 
 [extras]
