Calculate sdf and render on screen
Signed-off-by: Erik Buer <buer94@gmail.com>

--- a/Project.toml
+++ b/Project.toml
@@ -13,12 +13,14 @@ GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
 ImageCore = "a09fc81d-aa75-5fe9-8630-4744c3626534"
 ImageIO = "82e4d734-157c-48bb-816b-45c225c6df19"
 IndirectArrays = "9b13fd28-a010-5f03-acff-a1bbcff69959"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 ModernGL = "66fc600b-dfda-50eb-8b99-91cfa97b1301"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 
 [compat]
 FreeTypeAbstraction = "0.10.6"
 ImageIO = "0.6.9"
+LinearAlgebra = "1.11.0"
 
 [extras]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
