--- a/Project.toml
+++ b/Project.toml
@@ -20,7 +20,7 @@ OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 [compat]
 FreeTypeAbstraction = "0.10.6"
 ImageIO = "0.6.9"
-LinearAlgebra = "1.11.0"
+LinearAlgebra = "1.6.7, 1.11.0"
 
 [extras]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
