change all occurences of name to Element
Signed-off-by: Erik Buer <buer94@gmail.com>

--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "SimpleGui"
+name = "Element"
 uuid = "a78eb1c3-f9be-4b1a-a708-e7053b7f16d7"
 authors = ["Erik Buer <buer94@gmail.com>"]
 version = "0.1.0"
