--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -5,4 +5,4 @@ GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
 ImageCore = "a09fc81d-aa75-5fe9-8630-4744c3626534"
 IndirectArrays = "9b13fd28-a010-5f03-acff-a1bbcff69959"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
-SimpleGui = "a78eb1c3-f9be-4b1a-a708-e7053b7f16d7"
+Element = "a78eb1c3-f9be-4b1a-a708-e7053b7f16d7"
